# Word

./: CMakeLists.txt  README.md  global.h  main.c  main.cpp  test.c
.github/workflows/: Build.yml
UI_board/: .goutputstream-T64EPX  board.c  board.h  boolean.h  displayboard.c  displayboard.h  driverboard.c  interface.h  matriks.c  matriks.h  test
adt/: CMakeLists.txt  FinalTime.c  array.c  array.h  arraym.c  boolean.h  bukan_string.h  drivermap.c  drivermatriks.c  drivermultilist.c  driverqueue.c  driverset.c  e  jam.c  jam.h  lqstring.c  lqstring.h  mainkata1.c  map.c  map.h  matriks.c  matriks.h  mesinkar.c  mesinkar.h  mesinkata.c  mesinkata.h  mmesinkata.c  mpqueue.c  mtree  mtree.c  multilist.c  multilist.h  pitakar.txt  point.c  point.h  pqueue.c  pqueue.h  queue.c  queue.h  set.c  (+10 more)
database/: highscore.txt  suggestion.txt  user.txt
display/: CMakeLists.txt  board.c  board.h  drivermenu.c  driverprep.c  e  interface.c  interface.h  menu.c  menu.h  prep.c  prep.h
